service/external-svc-box.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-box-service
spec:
  type: ExternalName
  externalName: api.box.com
  ports:
  - port: 80
