service/node-app-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 1234
  selector:
    app: node-app
