service/node-app-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 1234
    nodePort: 31234
  selector:
    app: node-app
