service/node-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  ports:
  - port: 80
    targetPort: 1234
  selector:
    app: node-app
