service/node-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-app-ingress
spec:
  rules:
  - host: node-app.localhost.ibm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: node-app-nodeport
          servicePort: 31234
